--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Купеческий запас</title>
 </head>
 <body>
@@ -81,8 +83,8 @@
                             (светлый, карамельный), хмель гранулированный, дрожжи пивные.
                         </p>
                         <div class="procents">
-                            <p>Экстрактивность начального сусла: <span>&#8194 12% &#8195</span></p>
-                            <p>Алкоголь: <span>&#8194 4.5% об.</span></p>
+                            <p>Экстрактивность начального сусла: <span> 12% </span></p>
+                            <p>Алкоголь: <span> 4.5% об.</span></p>
                         </div>
                         <div class="products__button">
                             <a href="#adress">Где купить</a>
@@ -102,8 +104,8 @@
                             карамельный, жженый), хмель гранулированный, дрожжи пивные. 
                         </p>
                         <div class="procents">
-                            <p>Экстрактивность начального сусла: <span>&#8194 16% &#8195</span></p>
-                            <p>Алкоголь: <span>&#8194 5.2% об.</span></p>
+                            <p>Экстрактивность начального сусла: <span> 16% </span></p>
+                            <p>Алкоголь: <span> 5.2% об. </span></p>
                         </div>
                         <div class="products__button">
                             <a href="#adress">Где купить</a>
@@ -125,8 +127,8 @@
                             гранулированный, дрожжи пивные.
                         </p>
                         <div class="procents">
-                            <p>Экстрактивность начального сусла: <span>&#8194 13% &#8195</span></p>
-                            <p>Алкоголь: <span>&#8194 4.5% об.</span></p>
+                            <p>Экстрактивность начального сусла: <span> 13% </span></p>
+                            <p>Алкоголь: <span> 4.5% об.</span></p>
                         </div>
                         <div class="products__button">
                             <a href="#adress">Где купить</a>
@@ -145,8 +147,8 @@
                             (светлый, карамельный), хмель гранулированный, дрожжи пивные. 
                         </p>
                         <div class="procents">
-                            <p>Экстрактивность начального сусла: <span>&#8194 12.5% &#8195</span></p>
-                            <p>Алкоголь: <span>&#8194 4.5% об.</span></p>
+                            <p>Экстрактивность начального сусла: <span> 12.5% </span></p>
+                            <p>Алкоголь: <span> 4.5% об.</span></p>
                         </div>
                         <div class="products__button">
                             <a href="#adress">Где купить</a>
@@ -166,8 +168,8 @@
                             карамельный, жженый), хмель гранулированный, дрожжи пивные.
                         </p>
                         <div class="procents">
-                            <p>Экстрактивность начального сусла: <span>&#8194 20% &#8195</span></p>
-                            <p>Алкоголь: <span>&#8194 0.8% об.</span></p>
+                            <p>Экстрактивность начального сусла: <span> 20% </span></p>
+                            <p>Алкоголь: <span> 0.8% об.</span></p>
                         </div>
                         <div class="products__button">
                             <a href="#adress">Где купить</a>
