fixed little errors

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <form method="POST" action="./src/scripts/contact.php" class="contacts__block__form">
                     <input type="text" id="name" placeholder="Имя">
                     <input type="email" id="email" placeholder="E-mail">
-                    <textarea name="" id="message" cols="30" rows="1" placeholder="Соблаговалите письмо"></textarea>
+                    <textarea name="" id="message" cols="30" rows="1" placeholder="Соблаговалите написать письмо"></textarea>
                     <button type="button" id="send">Отослать письмо</button>
                 </form>
                 <div class="contacts__block__description">
